# stuartsmall.com

./: .gitignore  Makefile  config.toml  default.nix  netlify.toml
.github/workflows/: netlify.yml
build-md/: Cargo.toml  rust-toolchain.toml
build-md/src/: lib.rs  main.rs
content/blog/: 1.md  _index.md  cooklang.md
content/recipes/: _index.md  avgolemono.cook  biscuits.cook  borscht.cook  butter-chicken.cook  cornbread.cook  cream-of-asparagus-soup.cook  garam-masala.cook  jumbalaya.cook  mashed-potato-soup.cook  mousse.cook  palak-paneer.cook  rice-pylaf.cook
public/: sitemap.xml
scripts/: build_cookfiles.sh
static/: di_pres.odp  site.css  tlsslides.odp
templates/: base.html  blog_entry.html  blog_index.html  index.html  page.html  recipe_entry.html  recipe_index.html
